--- a/index2.html
+++ b/index2.html
@@ -9,8 +9,8 @@
 <body>
 	<figure>
 		<img src = "JonACTphoto.jpg"
-		width="30%" alt="Jon!">
-	<figcaption> Jon!!</figcaption>
+		width="25%" alt="Juan!">
+	<figcaption> Juan!!</figcaption>
 	</figure>
 	<!-- cuteness meter-->
 	<caption> Cuteness Meter</caption>
